--- a/SpaVueNotebook/appsettings.json
+++ b/SpaVueNotebook/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DataConnection": "Server=(localdb)\\mssqllocaldb; Database=VueCRUDApp; Trusted_Connection=true;"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
